# saveMZ

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requierment.txt  setup.py
src/save_MZ/: __init__.py  database.py  exceptions.py  serializer.py
