[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[project]
name = "savemz"
version = "2.0"
authors = [
  { name="Julius", email="jansses70@gmail.com" },
]
description = "It's easy save in Python with Json file"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent ",
    "License :: OSI Approved :: MIT License ",
]

[project.urls]
"Homepage" = "https://github.com/imozan/saveMZ.git"
"Bug Tracker" = "https://github.com/imozan/saveMZ/issues"

