[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "savemz"
version = "2.1"

authors = [
    { name = "Julius", email = "jansses70@gmail.com" }
]

description = "A lightweight JSON storage library with caching and events."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

keywords = [
    "json",
    "database",
    "storage",
    "cache",
    "events"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
